--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,16 @@
 <resources>
-    <string name="app_name">FYP_TomMadden</string>
+    <string name="app_name">PetWatch</string>
     <string name="title_activity_connection_page">ConnectionPage</string>
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">First Fragment</string>
     <string name="second_fragment_label">Second Fragment</string>
     <string name="next">Next</string>
     <string name="previous">Previous</string>
+
+    <string name="stop">Stop </string>
+    <string name="start">Start </string>
+    <string name="working">Started</string>
+    <string name="stopped">Stopped</string>
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
